<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.aunnait</groupId>
		<artifactId>appmusicparent</artifactId>
		<version>3.3.5</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<artifactId>structure</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>appmusic</name>
	<description>Demo project for AunnaIT</description>
	<properties>
		<java.version>17</java.version>
	</properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
    </dependencies>

</project>
